--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 	            </div>
 	            <div class="row">
 	            	<div class="col-sm-12 contact-form wow fadeInLeft">
-	                    <form role="form" action="assets/contact.php" method="post">
+	                    <form role="form">
 	                    	<div class="form-group">
 	                    		<label class="sr-only" for="contact-email">Email</label>
 	                        	<input type="text" name="email" placeholder="Email..." class="contact-email" id="contact-email">
